# CleanTodo

backend/: .dev.test.env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  alembic.ini  docker-compose.dev.test.yaml  docker-compose.dev.yaml  docker-compose.test.yaml  pyproject.toml  requirements_1.txt
backend/config/: config.toml  dev-test-config.toml  test-config.toml
backend/src/: __main__.py
backend/src/application/: __init__.py
backend/src/application/common/: command.py  dto.py  event.py  exceptions.py  query.py  validators.py
backend/src/application/user/: __init__.py  exceptions.py
backend/src/domain/: __init__.py
backend/src/domain/common/: constants.py
backend/src/domain/task/: constants.py
backend/src/domain/user/: __init__.py  exceptions.py
backend/src/domain/users_task/: exceptions.py
backend/src/infrastructure/: config_loader.py  uow.py
backend/src/infrastructure/db/: __init__.py  config.py  exception_mapper.py  main.py  uow.py
backend/src/infrastructure/di/: __init__.py  constants.py  main.py
backend/src/infrastructure/event_bus/: __init__.py  bindings.py  event_bus.py  event_handler.py  exchanges.py  queues.py  serializer.py
backend/src/infrastructure/mapper/: converter.py  events.py  main.py  user.py
backend/src/infrastructure/mediator/: __init__.py  main.py  utils.py
backend/src/infrastructure/message_broker/: __init__.py  config.py  configurate_broker.py  factories.py  interface.py  main.py  message.py  message_broker.py  uow.py
backend/src/presentation/api/: __main__.py  (+3 more)
backend/tests/api/: conftest.py
(+103 files in other folders)
