[tool.poetry]
name = "dddtodo"
version = "0.1.0"
description = ""
authors = ["Bol4onok <95026332+MihailGulkin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "^0.27.0"
pytest = "^7.3.1"
didiator = "^0.3.1"
uuid6 = "^2023.5.2"
adaptix = "^3.0.0a3"
sqlalchemy = "^2.0.12"
aio-pika = "^9.0.5"
di = "^0.75.3"
orjson = "^3.8.12"
tomli = "^2.0.1"
uvicorn = "^0.22.0"
alembic = "^1.10.4"
blacksheep = "^1.2.14"
pydantic = "^1.10.7"
aiofiles = "^23.1.0"
pre-commit = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "domain: test domain logic",
]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
